add extract number

--- a/regex.ipynb
+++ b/regex.ipynb
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_text = '【必須要件】■IT業界法人営業経験1年以上　もしくはインフラの設計もしくは運用のご経験ある方\\\n",
-    "■IDC(データセンター)を基にした、顧客提案に興味関心をお持ちの方【歓迎要件】\\\n",
-    "▼マネジメント経験をお持ちの方\",\"【高学歴必須】【転職回数2回以上厳禁】【その代わり年収、超高い】'"
+    "sample_text = '【必須要件】■1社で財務・経理を5年以上経験されている方■PCスキルをお持ちの方(システムからデータを抽出し、Excelで資料を作成することもあります)\\\n",
+    "【歓迎要件】■税務申告の基礎知識【求める人物像】●セルフスターターの方●コミュニケーション能力に優れた方\",\\\n",
+    "\"【募集背景】中堅スタッフ(男性)の欠員補充です。【書類選考Point】30代で転職回数2回(=3社経験)が目安。スキルによっては応相談。　【残業時間】平均的な残業時間(目安)40-50h/月程度。【'"
    ]
   },
   {
@@ -84,22 +84,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['転職回数2回以上厳禁']"
+       "['30代で転職回数2回', '3社経験']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "extract_changeover_age_pattern(sample_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "number_pattenr = re.compile(r'\\d+')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(number_pattenr,'代で転職回数回')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'30'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match.group()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_number(text):\n",
+    "    numbers = []\n",
+    "    patterns = extract_changeover_age_pattern(text)\n",
+    "    for pattern in patterns:\n",
+    "        match = re.findall(number_pattenr,pattern)\n",
+    "        if len(match) != 0:\n",
+    "            numbers.append(match)\n",
+    "    return numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['30', '2'], ['3']]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extract_number(sample_text)"
    ]
   }
  ],
