--- a/regex.ipynb
+++ b/regex.ipynb
@@ -2,23 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re"
+    "import re\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 180,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def remove_special_chars(text):\n",
-    "    remove_tag = r'。|◎|■|▼|◆|▽|・|･|\\.|●|①|②|③|;|,|、|★|☆|＊|\\+|◇|:|※|／／｜～|：' \\\n",
+    "    remove_tag = r'。|◎|■|▼|◆|▽|・|･|\\.|●|①|②|③|;|,|、|★|☆|＊|\\+|◇|※|／／｜～|：' \\\n",
     "                 r'|－|-|\\*|…|│|＋|←|→|\\?|└|（※）|「|」|⇔|「|」|『|』|\\u3000|' \\\n",
     "                 r'!|♪|！|~|％|%|～|\\?|\\／|\\/|&|=|⇒|└|xx|>|<|\\（|\\）|\\)|\\(|【|】|＜|＞' \\\n",
     "                 r'|≪|≫|\\[|\\]|\\r|\\n|\\t|\\'|_|e.g|\\{|\\}|\\#|\\@|\\$'\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 155,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 151,
    "metadata": {
     "collapsed": true
    },
@@ -55,18 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_text = '【必須要件】■1社で財務・経理を5年以上経験されている方■PCスキルをお持ちの方(システムからデータを抽出し、Excelで資料を作成することもあります)\\\n",
-    "【歓迎要件】■税務申告の基礎知識【求める人物像】●セルフスターターの方●コミュニケーション能力に優れた方\",\\\n",
-    "\"【募集背景】中堅スタッフ(男性)の欠員補充です。【書類選考Point】30代で転職回数2回(=3社経験)が目安。スキルによっては応相談。　【残業時間】平均的な残業時間(目安)40-50h/月程度。【'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 178,
    "metadata": {
     "collapsed": true
    },
@@ -84,16 +74,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_number(text):\n",
+    "    numbers = []\n",
+    "    patterns = extract_changeover_age_pattern(text)\n",
+    "    for pattern in patterns:\n",
+    "        match = analyze_pattern(pattern)\n",
+    "        if len(match) != 0:\n",
+    "            numbers.append(match)\n",
+    "    return numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def analyze_pattern(pattern):\n",
+    "    match = re.findall(number_pattenr,pattern)\n",
+    "    match = list(map(lambda item: int(item), match))\n",
+    "    match = sorted(match,reverse=False)\n",
+    "    contain_changeover = '社' in pattern or '者' in pattern or '回' in pattern\n",
+    "    contain_age = '代' in pattern or '歳' in pattern\n",
+    "    if contain_changeover and not contain_age:\n",
+    "        if '社' in pattern or '者' in pattern:\n",
+    "            return (match[0]-1,0,200)\n",
+    "        else:\n",
+    "            return (match[0],0,200)\n",
+    "    if not contain_changeover and contain_age:\n",
+    "        if '代' in pattern:\n",
+    "            return (200,match[0],match[0] + 9)\n",
+    "        else:\n",
+    "            return (200,0,match[0])\n",
+    "    if contain_changeover and contain_age:\n",
+    "        if '社' in pattern or '者' in pattern:\n",
+    "            if '代' in pattern:\n",
+    "                return(match[0]-1,match[1],match[1]+9)\n",
+    "            elif '歳' in pattern:\n",
+    "                return(match[0]-1,0,match[1])\n",
+    "        elif '回' in pattern:\n",
+    "            if '代' in pattern:\n",
+    "                return(match[0],match[1],match[1]+9)\n",
+    "            elif '歳' in pattern:\n",
+    "                return(match[0],0,match[1])\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sample_text = '■メーカー(従業員200人以上)での人事総務の実務経験※「人事のみ」「総務のみ」ではなく幅広く経験された方歓迎■マネジメント経験のある方■自ら先頭にたって、賃金制度等の構築等を出来る方。\",\"■3社経験(次4社目)まででないとNGです。'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['30代で転職回数2回', '3社経験']"
+       "['3社経験', '次4社目']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,90 +157,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "number_pattenr = re.compile(r'\\d+')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "False"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "re.findall(number_pattenr,'代で転職回数回')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'30'"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "match.group()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_number(text):\n",
-    "    numbers = []\n",
-    "    patterns = extract_changeover_age_pattern(text)\n",
-    "    for pattern in patterns:\n",
-    "        match = re.findall(number_pattenr,pattern)\n",
-    "        if len(match) != 0:\n",
-    "            numbers.append(match)\n",
-    "    return numbers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['30', '2'], ['3']]"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "extract_number(sample_text)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
