--- a/regex.ipynb
+++ b/regex.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -132,61 +132,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sample_text = '▼銀行、クレジットカード会社経験者歓迎 \\\n",
-    "※望ましい事業会社経験:流通・電機・機械・自動車・製薬・エネルギー・IT\",\"【銀】【証】【投信】【リース】\\\n",
-    "◆30代では1社経験がベストです。\\\n",
-    "■ビジネスレベルの中国語\",\"【25%】【2社経験必須】【55歳以上はNG】【レべルは日本電産と同等】　窓口は日本電産人事部 \\\n",
-    "◆ゼネコン会社経験者\",\"■転勤については応相談 \\\n",
-    "Firewal\",\"【年齢が高くなるにつれて求められるスキルも高くなります】【Windowsエンジニア　39歳　3社経験　成約】\\\n",
-    "います～\",\"■07卒業可(書類選考はOK)　■1社経験基本(転職理由明確な方) \\\n",
-    "■英語力(TOEIC500点以上)\",\"■2社経験迄■MARCH、関関同立、南山、以上の大学出身者■二卒は早慶、国公立 \\\n",
-    "58175\",\"【経験】■戦略系コンサルティング経験者歓迎■戦略系コンサルティング経験3年以上■事業会社での経営企画・事業開発経験■プロジェクトマネジメント経験あれば尚可 \\\n",
-    "■実務経験を5年以上お持ちの方\",\"■社歴について～30歳まで1社経験者のみ、～35歳2社経験まで　これ以上の会社経験のあ \\\n",
-    "考Point】30代で転職回数2回(=3社経験)が目安。スキルによっては応相談。　【残業時間】平均的な残業時間(目安)40-50h/月程度。【 \\\n",
-    "■経験社数:20代1社経験、30代2社経験まで \\\n",
-    "58624■国内外の知的財産権の確保・活用の実務経験をお持ちの方 転職回数:20代2社・30～40代3社くらいまで\",\"★書類通過者：24歳女性約2年強：1社経験：アセンブラでJAL予約管理システム開発をされていた方【書類通過】24歳：太陽生命7ヶ月⇒ブランク10ヶ月■書類通過率約90％■中途社員比率約40％■11月末からは未経験採用もあり（4月の新卒と共に研修して頂くため）07年1月、未経験者2名紹介から採用。\"';"
+    "sample_text = '転職回数厳守!…20代:2社経験、30代:3社経験まで';"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['30代では1社経験がベストです',\n",
-       " '2社経験必須',\n",
-       " 'Windowsエンジニア\\u300039歳\\u30003社経験\\u3000成約',\n",
-       " '1社経験基本(転職理由明確な方)',\n",
-       " '2社経験迄',\n",
-       " '社歴について～30歳まで1社経験者のみ',\n",
-       " '～35歳2社経験まで\\u3000これ以上の会社経験のあ',\n",
-       " '30代で転職回数2回(=3社経験)が目安',\n",
-       " '経験社数:20代1社経験',\n",
-       " '30代2社経験まで',\n",
-       " '転職回数:20代2社・30～40代3社くらいまで\"',\n",
-       " '書類通過者：24歳女性約2年強：1社経験：アセンブラでJAL予約管理システム開発をされていた方']"
-      ]
-     },
-     "execution_count": 180,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "extract_changeover_age_pattern(sample_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -281,19 +247,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(30, 39, 1), (0, 200, 2), (0, 39, 3), (0, 200, 1), (0, 200, 2), (0, 30, 1), (0, 35, 2), (30, 39, 3), (20, 29, 1), (30, 39, 2), (20, 29, 2), (30, 40, 3), (0, 24, 1)]\n"
+      "[(20, 29, 2), (30, 39, 3)]\n"
      ]
     }
    ],
    "source": [
     "print(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def extract_toeic(text):\n",
+    "    toeic_pattern = re.compile(r'TOIEC\\d+|TOEIC\\d+')\n",
+    "    sentences = split2sentences(text)\n",
+    "    for sentence in sentences:\n",
+    "        match = re.search(toeic_pattern, sentence)\n",
+    "        if match is not None:\n",
+    "            print(re.smatch.group())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sample_text = '必須要件】■物流会社あるいは商社等での輸出業務経験5年以上■英語力(TOEIC600点以上)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TOEIC600\n"
+     ]
+    }
+   ],
+   "source": [
+    "extract_toeic(sample_text)"
    ]
   },
   {
@@ -322,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
