--- a/regex.ipynb
+++ b/regex.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -285,16 +285,20 @@
    "source": [
     "def extract_toeic(text):\n",
     "    toeic_pattern = re.compile(r'(TOIEC|TOEIC|TIOEC|TIEC|TOEC|toiec|toeic|tioec|toec)\\d+')\n",
+    "    number_pattern = re.compile(r'\\d+')\n",
     "    sentences = split2sentences(text)\n",
     "    for sentence in sentences:\n",
     "        match = re.search(toeic_pattern, sentence)\n",
     "        if match is not None:\n",
-    "            print(match.group())"
+    "            toeic = re.search(number_pattern, match.group())\n",
+    "            \n",
+    "            if (toeic is not None):\n",
+    "                return toeic.group()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -305,19 +309,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TOEIC600\n"
+      "600\n"
      ]
     }
    ],
    "source": [
-    "extract_toeic(sample_text)"
+    "x = extract_toeic(sample_text)\n",
+    "print(x)"
    ]
   },
   {
