--- a/regex.ipynb
+++ b/regex.ipynb
@@ -277,14 +277,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def extract_toeic(text):\n",
-    "    toeic_pattern = re.compile(r'(TOIEC|TOEIC|TIOEC|TIEC|TOEC|toiec|toeic|tioec|toec)\\d+')\n",
+    "    text = text.lower()\n",
+    "    toeic_pattern = re.compile(r'(toiec|toeic|tioec|toec)\\d+')\n",
     "    number_pattern = re.compile(r'\\d+')\n",
     "    sentences = split2sentences(text)\n",
     "    for sentence in sentences:\n",
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
